<resources>
    <string name="app_name">FRZAH</string>
    <string name="see_review"><u>See Review</u></string>
    <string name="google_map_api_key">AIzaSyDgPSrkLQMUmrfhth86Naz6Es42TDPZWrA</string>
    <string name="default_notification_channel_id"> 1001 </string>
    <string name="reason_order_id">Reason/Order ID</string>
    <string name="query">Query</string>
    <string name="enter_your_reason_order_id">Enter your Reason/Order ID</string>
    <string name="write_here">Write here..</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_image">Add Image</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="select_language">Select Language</string>
    <string name="continues">Continue</string>
    <string name="notification">Notifications</string>
    <string name="cart">Cart</string>
    <string name="please_add_address">Please Add Address</string>
    <string name="term_conditions">Terms and Conditions</string>
    <string name="favorites">Favorites</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="update_addres">Update Address</string>
    <string name="please_select_address">Please Select Address</string>
    <string name="please_select_type_of_address">Please Select Type Of Address</string>
    <string name="please_enter_valid_phone_number">Please Enter Valid Phone Number</string>
    <string name="please_enter_phone_number">Please Enter Phone Number</string>
    <string name="please_enter_full_name">Please Enter Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="select_address">Select Address</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="street_include_house_number">Street (Include house number)</string>
    <string name="street">Street</string>
    <string name="type_of_address">Type of Address</string>
    <string name="save">SAVE</string>
    <string name="make_this_my_default_address">Make this my default Address</string>
    <string name="home">Home</string>
    <string name="office_commercial">Office/Commercial</string>
    <string name="please_specify_reason">Please specify reason</string>
    <string name="please_specify_query">Please specify query</string>
    <string name="please_upload_photo">Please upload photo</string>
    <string name="please_allow_permission_for_security">Please allow the permission for the security purpose</string>
    <string name="please_enter_coupon_code_first">Please enter Coupon code first</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="add_new_address">Add New Address</string>
    <string name="faqs">FAQs</string>
    <string name="arabian">Arabian</string>
    <string name="ksa">KSA</string>
    <string name="dark">Dark</string>
    <string name="acacia">Acacia</string>
    <string name="black_forest">Black Forest</string>
    <string name="filter">Filter</string>
    <string name="sar">SAR </string>
    <string name="filtered_shops">Filtered Shops</string>
    <string name="store_added">Store added to wishlist successfully</string>
    <string name="store_removed">Store removed from wishlist successfully</string>
    <string name="shops">Shops</string>
    <string name="search_honey_products_stores">Search Honey Products/Stores</string>
    <string name="honey_type">Honey Type</string>
    <string name="sort_by">Sort By</string>
    <string name="rating">Rating</string>
    <string name="price_range">Price Range</string>
    <string name="sar_5_sar_5000">SAR 5 - SAR 5000</string>
    <string name="reset">RESET</string>
    <string name="natural">Natural</string>
    <string name="one_daya">1 Day</string>
    <string name="two_days">2 Days</string>
    <string name="three_days">3 Days</string>
    <string name="four_days">4 Days</string>
    <string name="five_days">5 Days</string>
    <string name="six_day">6 Days</string>
    <string name="seven_days">7 Days</string>
    <string name="eight_days">8 Days</string>
    <string name="ten_days">10 Days</string>
    <string name="nine_days">9 Days</string>
    <string name="km">km</string>
    <string name="verify_account">Verify Account</string>
    <string name="by_verifying_phone_number_you_can_order_and_check_your_order_history_as_well">By verifying phone number you can order and check your order history as well</string>
    <string name="next">NEXT</string>
    <string name="_1_km_100_km">1 km - 100 Km</string>
    <string name="distance">Distance</string>
    <string name="delivery_day">Delivery Day</string>
    <string name="deliver_to">Deliver to</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_language">Change Language</string>
    <string name="help_amp_faqs">Help &amp; FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="seller_details">Seller Details</string>
    <string name="offer_items">Offer Items</string>
    <string name="my_order">My Orders</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="pending">Your request has been sent</string>
    <string name="processed">Your request has been received</string>
    <string name="shipped">Your order has been shipped</string>
    <string name="deliveried">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_id">Order Id : #</string>
    <string name="delivery_to">Delivery to : </string>
    <string name="address_">Address : </string>
    <string name="mobile_numbers">\nMobile No : </string>
    <string name="cod">Cash On Delivery</string>
    <string name="online">Online</string>
    <string name="order_id_new">Order Id :</string>
    <string name="tracking_url">Tracking Url :</string>
    <string name="tracking_id">Tracking Id :</string>
    <string name="expected_delivery">Expected Delivery</string>
    <string name="order_on">Order on</string>
    <string name="order_summary">Order Summary</string>
    <string name="items">Items</string>
    <string name="payment_details">Payment Details</string>
    <string name="subtotal">SubTotal</string>
    <string name="tax_and_fees">Tax and Fees</string>
    <string name="discount">Discount</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method :</string>
    <string name="cancel">Cancel</string>
    <string name="re_order">Re-Order</string>
    <string name="rate">Rate</string>
    <string name="type_verification_code">Please type the  verification code sent to</string>
    <string name="phone_number_not_exist">Phone Number does not exist.</string>
    <string name="login_successfully">Login successfully.</string>
    <string name="login_successful">Login Successful</string>
    <string name="wait_for_otp">Please wait for the otp</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="one_time_password">One Time Password</string>
    <string name="i_don_t_receive_a_code">I don\'t receive a code!  </string>
    <string name="please_resend">  Please resend</string>
    <string name="payment">Payment</string>
    <string name="order_successfully_placed">Order successfully placed!</string>
    <string name="please_add_address_first">Please add address first</string>
    <string name="please_select_payment_option">Please select payment option</string>
    <string name="shipping_to">Shipping to</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="review">review</string>
    <string name="out_of_stock">Out Of Stock!</string>
    <string name="add_review">Add Review</string>
    <string name="please_give_rating_first">Please give the rating first</string>
    <string name="please_advice_better_suggestion">Please advice for better suggestions!</string>
    <string name="rate_your_product">Rate your Product</string>
    <string name="rate_your_store">Rate your Store</string>
    <string name="any_comment_suggestions">Any Comment/Suggestions</string>
    <string name="submit">SUBMIT</string>
    <string name="write_your_review">Write your review...</string>
    <string name="reviews">Reviews</string>
    <string name="honey_product">Honey Product</string>
    <string name="honey_stores">Honey Stores</string>
    <string name="search_honey">Search Honey</string>
    <string name="honey_name">Honey Name</string>
    <string name="store_name">Store Name</string>
    <string name="search_location">Search Location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="add_address">Add Address</string>
    <string name="read_more">Read More</string>
    <string name="undo">Undo</string>
    <string name="getting_address">Getting address....</string>
    <string name="sorry_not_server_here">Sorry we do not serve here yet…</string>
    <string name="didnot_get_address_yet">Sorry we didn\'t get your address yet, Please Try Again!</string>
    <string name="please_turn_gps">Please turn on gps for the security purpose</string>
    <string name="internet_not_available">Internet not available.</string>
    <string name="search_for_your_location">Search for your location</string>
    <string name="select_delivery_location">Select delivery location</string>
    <string name="your_address">Your Address</string>
    <string name="confirm_location">CONFIRM LOCATION</string>
    <string name="product_removed_from_wishlist">Product removed from wishlist successfully</string>
    <string name="product_added_to_wishlist">Product added to wishlist successfully</string>
    <string name="store_added_to_wishlist">Store added to wishlist successfully</string>
    <string name="product_added_to_cart">Product added to Cart successfully</string>
    <string name="day">Day</string>
    <string name="no_item_cart">No Item in a cart</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="applied_code">Applied code: </string>
    <string name="item">item</string>
    <string name="hey_it_feels_to_light">Hey,it feels to light!</string>
    <string name="there_is_nothing_in_your_bag_let_s_add_some_items">There is nothing in your bag,let\'s add some items.</string>
    <string name="checkout">CHECKOUT</string>
    <string name="all">ALL</string>
    <string name="latest">LATEST</string>
    <string name="popular_caps">POPULAR</string>
    <string name="distance_caps">DISTANCE</string>
    <string name="store_removed_from_wishlist">Store removed from wishlist successfully</string>
    <string name="all_shops">ALL SHOPS</string>
    <string name="all_shop">ALL SHOP</string>
    <string name="offers">OFFERS</string>
    <string name="offer">OFFER</string>
    <string name="near_by_shops">NEAR BY SHOPS</string>
    <string name="near_by_shop">NEAR BY SHOP</string>
    <string name="shops_cap">SHOPS</string>
    <string name="saved_address">Saved Address</string>
</resources>