<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchLocation.SearchLocationActivity">

    <include
        android:id="@+id/include11"
        layout="@layout/layout_common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCurrentLocation"
        style="@style/WalkThroughTitleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/bitmap_current_location"
        android:drawablePadding="12dp"
        android:text="@string/use_current_location"
        android:textAlignment="viewStart"
        android:textColor="@color/app_theme_organe"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include11" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/cool_grey"
        app:layout_constraintEnd_toEndOf="@+id/tvCurrentLocation"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocation" />

    <TextView
        android:id="@+id/tvAddress"
        style="@style/WalkThroughTitleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/bitmap_add"
        android:drawablePadding="12dp"
        android:text="@string/add_address"
        android:textAlignment="viewStart"
        android:textColor="@color/app_theme_organe"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5" />


    <TextView
        android:id="@+id/tvAddressLabel"
        style="@style/AltaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="12dp"
        android:text="@string/saved_address"
        android:visibility="gone"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <com.mlsdev.animatedrv.AnimatedRecyclerView
        android:id="@+id/rvAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:animationDuration="800"
        app:layoutAnimation="@anim/layout_animation_from_bottom"
        app:layoutManagerOrientation="vertical"
        app:layoutManagerReverse="false"
        app:layoutManagerType="linear"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressLabel" />








</androidx.constraintlayout.widget.ConstraintLayout>